# neuman-orchards

./: .gitignore  2026_summer_raised_bed_plan_seed_only.xlsx  2026_summer_seed_only_variety_key.md  AGENTS.md  Garden Planing and Inventory.xlsx  Welcome to your new Baby Apple or Pear Tree.docx  add_self_seeding_edibles_sheet.py  add_tastiness_and_harvest_difficulty.py  add_tastiness_and_productivity_scores.py  build_knowledgebase.py  garden_plan_2026_seed_only_spec.json  garden_plan_2026_summer_spec.json  update_zone7_inventory.py
garden-helper/: README.md  pyproject.toml
garden-helper/examples/: example_farmbot_bundle.json  example_garden_snapshot.json  exported_memory_context.json
garden-helper/plans/: farmbot_cutover_plan.md  garden_twin_integration_plan.md
garden-helper/schemas/: garden_snapshot.schema.json
garden-helper/src/garden_helper/: __init__.py  cli.py  farmbot.py  ids.py  memory.py  schema.py  stack.py  sync.py
garden-helper/tests/: test_farmbot.py  test_sync.py
knowledgebase/: Bec_Hellouin_summary.md  README.md  catalog.csv
knowledgebase/01_core_microfarm_permaculture/: Morel-Leger-2016-conceptual-framework.md  Morel-Leger-2016-conceptual-framework.url
knowledgebase/02_intensive_vegetable_systems/: Navarrete-Dupre-Lamine-2014-crop-management-labour-marketing.md  Navarrete-Dupre-Lamine-2014-crop-management-labour-marketing.url
knowledgebase/13_inventories_and_local_lists/: README.md  (+4 more)
raised_beds/: 2026_summer_raised_bed_plan.xlsx  2026_summer_raised_bed_plan_seed_only.xlsx
tools/: open_source_garden_planning_tools.md
(+93 files in other folders)
