[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "garden-helper"
version = "0.1.0"
description = "Local garden twin prototype with FarmBot bundle sync and xardin-compatible memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
garden-helper = "garden_helper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
